# PixeLana_further

./: .gitignore  README.md  bun.lockb
backend_rs/: Cargo.toml
backend_rs/src/: main.rs  state.rs  utils.rs
server/: server.ts  serverV2.ts  utils.ts
server/models/: player.ts
src/app/: layout.tsx  page.tsx
src/app/end/: page.tsx
src/app/prompt/: page.tsx
src/app/round/: page.tsx
src/components/: customAvatar.tsx  drawPage.tsx  endPage.tsx  navBar.tsx  promptPage.tsx  waitRoom.tsx  waitingPage.tsx
src/contexts/: GameStateProvider.tsx  SocketAuthContext.tsx
src/lib/: useAction.tsx
